--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <section>
                                 <core-icon icon="device:developer-mode"></core-icon>
                                 <h3>Begins with "Java"</h3>
-                                <p>Java, Android, JavaScript, and whatever comes on the way.</p>
+                                <p>Java, Android, JavaScript, and whatever comes in the way.</p>
                             </section>
                         </div>
                         <div class="content-column" flex>
