--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="import" href="bower_components/core-icons/device-icons.html">
     <link rel="import" href="bower_components/paper-elements/paper-elements.html">
     <link rel="stylesheet" href="./css/animations.css">
-    <link rel="stylesheet" href="./css/polymer_theme_denim.css" shim-shadowdom>
-    <link rel="stylesheet" href="bower_components/RRSSB/css/rrssb.css" />
+    <link rel="stylesheet" href="./css/polymer_denim_custom_light.css" shim-shadowdom>
+    <link rel="stylesheet" href="css/social-style.css">
     <style>
         core-icon {
             color: #FFF;
@@ -27,7 +27,7 @@
 <body unresolved fullbleed touch-action="auto" fullbleed layout vertical>
     <core-header-panel flex>
         <div id="content">
-            <!-- This stylle is a fix for Firefox and the like -->
+            <!-- This is a fix for non-Chromium browsers -->
             <style shim-shadowdom>
                 .unselectable {
                     -webkit-user-select: none;
@@ -54,14 +54,14 @@
                     <article>
                         <img src="images/me.png" alt="">
                         <div>
-                            <h1 class="animated growIn slow go">Hello, I am Jorge</h1>
+                            <h1 class="animated bounceIn down go">Hello, I am Jorge</h1>
                             <h2>and I work within software development</h2>
                         </div>
                     </article>
                 </header>
                 <footer>
                     <a href="http://linkedin.com/in/jorgediazbenitosoriano" title="Reach me!">
-                        <paper-button raised primary>
+                        <paper-button raised primary style="background-color: #555;">
                             <core-icon icon="social:person"></core-icon>
                             Reach me!</paper-button>
                     </a>
@@ -99,86 +99,21 @@
                 </div>
             </section>
         </div>
-        <div id="social-buttons" class="social-buttons">
-            <ul>
-                <ul class="rrssb-buttons clearfix rrssb-1">
-                    <li class="rrssb-facebook" data-initwidth="14.285714285714286" data-size="64" style="width: calc(50% - 105px);">
-                        <a target="_blank" href="https://www.facebook.com/Mangarinos">
-                            <span class="rrssb-icon">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 28 28" enable-background="new 0 0 28 28" xml:space="preserve">
-                  <path d="M27.825,4.783c0-2.427-2.182-4.608-4.608-4.608H4.783c-2.422,0-4.608,2.182-4.608,4.608v18.434
-                                        c0,2.427,2.181,4.608,4.608,4.608H14V17.379h-3.379v-4.608H14v-1.795c0-3.089,2.335-5.885,5.192-5.885h3.718v4.608h-3.726
-                                        c-0.408,0-0.884,0.492-0.884,1.236v1.836h4.609v4.608h-4.609v10.446h4.916c2.422,0,4.608-2.188,4.608-4.608V4.783z"></path>
-                </svg>
-              </span>
-                            <span class="rrssb-text">Mangarinos</span>
-                        </a>
-                    </li>
-                    <li class="rrssb-linkedin small" data-initwidth="14.285714285714286" data-size="53" style="width: 42px;">
-                        <a href="http://www.linkedin.com/in/jorgediazbenitosoriano">
-                            <span class="rrssb-icon">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 28 28" enable-background="new 0 0 28 28" xml:space="preserve">
-                  <path d="M25.424,15.887v8.447h-4.896v-7.882c0-1.979-0.709-3.331-2.48-3.331c-1.354,0-2.158,0.911-2.514,1.803
-                                        c-0.129,0.315-0.162,0.753-0.162,1.194v8.216h-4.899c0,0,0.066-13.349,0-14.731h4.899v2.088c-0.01,0.016-0.023,0.032-0.033,0.048
-                                        h0.033V11.69c0.65-1.002,1.812-2.435,4.414-2.435C23.008,9.254,25.424,11.361,25.424,15.887z M5.348,2.501
-                                        c-1.676,0-2.772,1.092-2.772,2.539c0,1.421,1.066,2.538,2.717,2.546h0.032c1.709,0,2.771-1.132,2.771-2.546
-                                        C8.054,3.593,7.019,2.501,5.343,2.501H5.348z M2.867,24.334h4.897V9.603H2.867V24.334z"></path>
-                </svg>
-              </span>
-                            <span class="rrssb-text">jorgediazbenitosoriano</span>
-                        </a>
-                    </li>
-                    <li class="rrssb-twitter small" data-initwidth="14.285714285714286" data-size="50" style="width: 42px;">
-                        <a target="_blank" href="https://twitter.com/JMangarinos">
-                            <span class="rrssb-icon">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 28 28" enable-background="new 0 0 28 28" xml:space="preserve">
-                  <path d="M24.253,8.756C24.689,17.08,18.297,24.182,9.97,24.62c-3.122,0.162-6.219-0.646-8.861-2.32
-                                    c2.703,0.179,5.376-0.648,7.508-2.321c-2.072-0.247-3.818-1.661-4.489-3.638c0.801,0.128,1.62,0.076,2.399-0.155
-                                    C4.045,15.72,2.215,13.6,2.115,11.077c0.688,0.275,1.426,0.407,2.168,0.386c-2.135-1.65-2.729-4.621-1.394-6.965
-                                    C5.575,7.816,9.54,9.84,13.803,10.071c-0.842-2.739,0.694-5.64,3.434-6.482c2.018-0.623,4.212,0.044,5.546,1.683
-                                    c1.186-0.213,2.318-0.662,3.329-1.317c-0.385,1.256-1.247,2.312-2.399,2.942c1.048-0.106,2.069-0.394,3.019-0.851
-                                    C26.275,7.229,25.39,8.196,24.253,8.756z"></path>
-                </svg>
-              </span>
-                            <span class="rrssb-text">@JMangarinos</span>
-                        </a>
-                    </li>
-                    <li class="rrssb-github small" data-initwidth="14.285714285714286" data-size="44" style="width: 42px;">
-                        <a href="https://github.com/Stoyicker">
-                            <span class="rrssb-icon">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 28 28" enable-background="new 0 0 28 28" xml:space="preserve">
-                  <path d="M13.971,1.571c-7.031,0-12.734,5.702-12.734,12.74c0,5.621,3.636,10.392,8.717,12.083c0.637,0.129,0.869-0.277,0.869-0.615
-                                    c0-0.301-0.012-1.102-0.018-2.164c-3.542,0.77-4.29-1.707-4.29-1.707c-0.579-1.473-1.414-1.863-1.414-1.863
-                                    c-1.155-0.791,0.088-0.775,0.088-0.775c1.277,0.104,1.96,1.316,1.96,1.312c1.136,1.936,2.991,1.393,3.713,1.059
-                                    c0.116-0.822,0.445-1.383,0.81-1.703c-2.829-0.32-5.802-1.414-5.802-6.293c0-1.391,0.496-2.527,1.312-3.418
-                                    C7.05,9.905,6.612,8.61,7.305,6.856c0,0,1.069-0.342,3.508,1.306c1.016-0.282,2.105-0.424,3.188-0.429
-                                    c1.081,0,2.166,0.155,3.197,0.438c2.431-1.648,3.498-1.306,3.498-1.306c0.695,1.754,0.258,3.043,0.129,3.371
-                                    c0.816,0.902,1.315,2.037,1.315,3.43c0,4.892-2.978,5.968-5.814,6.285c0.458,0.387,0.876,1.16,0.876,2.357
-                                    c0,1.703-0.016,3.076-0.016,3.482c0,0.334,0.232,0.748,0.877,0.611c5.056-1.688,8.701-6.457,8.701-12.082
-                                    C26.708,7.262,21.012,1.563,13.971,1.571L13.971,1.571z"></path>
-                </svg>
-              </span>
-                            <span class="rrssb-text">Stoyicker</span>
-                        </a>
-                    </li>
-                </ul>
-            </ul>
-        </div>
         <?php echo htmlspecialchars( "<!--[if lte IE 9]>
       <link href='./css/animations-ie-fix.css' rel='stylesheet'>
 <![endif]-->"); ?>
+        <div class="social-wrapper">
+            <div class="social" onclick="window.location='http://linkedin.com/in/jorgediazbenitosoriano';">&#62235;</div>
+            <div class="social" onclick="window.location='http://github.com/Stoyicker';">&#62216;</div>
+            <div class="social" onclick="window.location='http://facebook.com/Mangarinos';">&#62209;</div>
+            <div class="social" onclick="window.location='http://twitter.com/JMangarinos';">&#62211;</div>
+        </div>
         <div id="footer" style="text-align: center; margin: 30px 0px 20px 0px;">
-            <p class="small">
+            <p1 class="small">
                 <br> © 2015 Jorge Antonio Diaz-Benito Soriano
-            </p>
+                </p>
         </div>
     </core-header-panel>
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script>
-        window.jQuery || document.write('<script src="bower_components/RRSSB/js/vendor/jquery.1.10.2.min.js"><\/script>')
-    </script>
-    <script src="bower_components/RRSSB/js/rrssb.min.js"></script>
 </body>
 
 </html>
