A lot more fanciness

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 
-<body unresolved fullbleed touch-action="auto" fullbleed layout vertical>
+<body unresolved fullbleed touch-action="auto" fullbleed layout vertical style="background-image:url(images/concrete_seamless.png)">
     <core-header-panel flex>
         <div id="content">
             <!-- This is a fix for non-Chromium browsers -->
