--- a/index.html
+++ b/index.html
@@ -76,23 +76,23 @@
                     <div horizontal layout>
                         <div class="content-column" flex>
                             <section>
-                                <core-icon icon="device:developer-mode"></core-icon>
-                                <h3>Begins with "Java"</h3>
-                                <p class="animate-in">Java, Android, JavaScript, and whatever comes in the way.</p>
-                            </section>
-                        </div>
-                        <div class="content-column" flex>
-                            <section>
                                 <core-icon icon="social:mood"></core-icon>
-                                <h3>Teamwork player</h3>
+                                <h3>Team player</h3>
                                 <p>Promoting social interactions and collaborative development since 1991.</p>
                             </section>
                         </div>
                         <div class="content-column" flex>
                             <section>
                                 <core-icon icon="social:people"></core-icon>
-                                <h3>Agile advocate</h3>
-                                <p>Software development has evolved. Change is real, empower your team.</p>
+                                <h3>Agile</h3>
+                                <p>Change is real, empower your team.</p>
+                            </section>
+                        </div>
+                        <div class="content-column" flex>
+                            <section>
+                                <core-icon icon="device:developer-mode"></core-icon>
+                                <h3>Begins with "Java"</h3>
+                                <p class="animate-in">Java, Android, JavaScript, and whatever comes in the way.</p>
                             </section>
                         </div>
                     </div>
