Implemented the 'Education' section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Material Design Lite</title>
+    <title>Jorge</title>
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
@@ -75,7 +75,7 @@
                 </div>
                 <div class="mdl-card on-the-road-again mdl-cell mdl-cell--12-col">
                     <div class="mdl-card__media mdl-color-text--grey-50">
-                        <h3><a href="entry.html">Education</a></h3>
+                        <h3><a href="education.html">Education</a></h3>
                     </div>
                     <div class="mdl-color-text--grey-600 mdl-card__supporting-text">
                         Half in Sweden, half in Spain.
@@ -116,15 +116,6 @@
                         </div>
                     </div>
                 </div>
-                <nav class="demo-nav mdl-cell mdl-cell--12-col">
-                    <div class="section-spacer"></div>
-                    <a href="entry.html" class="demo-nav__button">
-              More
-              <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                <i class="material-icons">arrow_forward</i>
-              </button>
-            </a>
-                </nav>
             </div>
             <footer class="mdl-mini-footer">
                 <div class="mdl-mini-footer--left-section">
@@ -136,6 +127,7 @@
         </main>
         <div class="mdl-layout__obfuscator"></div>
     </div>
+    <a href="https://www.linkedin.com/inbox/#compose?subject=&connId=169653526" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Contact</a>
     <script src="../../material.min.js"></script>
 </body>
 <script>
