--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             margin-bottom: 40px;
             z-index: 900;
         }
+
     </style>
 </head>
 
@@ -77,43 +78,15 @@
                     <div class="mdl-card__media mdl-color-text--grey-50">
                         <h3><a href="education.html">Education</a></h3>
                     </div>
-                    <div class="mdl-color-text--grey-600 mdl-card__supporting-text">
-                        Half in Sweden, half in Spain.
-                    </div>
                     <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
                         <div>
-                            <span>MSc in Software Engineering from Chalmers University of Technology.</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="mdl-card amazing mdl-cell mdl-cell--12-col">
-                    <div class="mdl-card__title mdl-color-text--grey-50">
-                        <h3 class="quote"><a href="entry.html">I couldn’t take any pictures but this was an amazing thing…</a></h3>
-                    </div>
-                    <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-                        Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
-                    </div>
-                    <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
-                        <div class="minilogo"></div>
-                        <div>
-                            <strong>The Newist</strong>
-                            <span>2 days ago</span>
+                            <span>MSc in Software Engineering, Chalmers University of Technology.</span>
                         </div>
                     </div>
                 </div>
                 <div class="mdl-card shopping mdl-cell mdl-cell--12-col">
                     <div class="mdl-card__media mdl-color-text--grey-50">
-                        <h3><a href="entry.html">Shopping</a></h3>
-                    </div>
-                    <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-                        Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia laborum et consequat duis.
-                    </div>
-                    <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
-                        <div class="minilogo"></div>
-                        <div>
-                            <strong>The Newist</strong>
-                            <span>2 days ago</span>
-                        </div>
+                        <h3><a href="achievements.html">Achievements</a></h3>
                     </div>
                 </div>
             </div>
@@ -131,7 +104,7 @@
     <script src="../../material.min.js"></script>
 </body>
 <script>
-    Array.prototype.forEach.call(document.querySelectorAll('.mdl-card__media'), function (el) {
+    Array.prototype.forEach.call(document.querySelectorAll('.mdl-card__media'), function(el) {
         var link = el.querySelector('a');
         if (!link) {
             return;
@@ -140,10 +113,11 @@
         if (!target) {
             return;
         }
-        el.addEventListener('click', function () {
+        el.addEventListener('click', function() {
             location.href = target;
         });
     });
+
 </script>
 
 </html>
