--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <p>
                             I am from Spain, but currently live and work in Sweden, where I moved looking for a more challenging environment. On the technical side, I am most comfortable with Java and the Android framework.
                             <br>
-                            <br> As a person, I am very active and curious. In my free time I like to do sports or go out with my friends, although I may stay at home learning something on my own.
+                            <br> As a person, I am very active and curious. In my free time I like to do sports or go out with my friends, although from time to time I may stay at home learning something on my own.
                         </p>
                         <a href="https://github.com/Stoyicker" target="_blank">
                         Check out my GitHub profile
