--- a/coverletter.html
+++ b/coverletter.html
@@ -64,7 +64,7 @@
                     <div class="col-md-6">
                         <div id="side-menu" class="move-me">
                             <hr class="hr-set" />
-                            <span class="logo-text">Mine Resume</span> <i class="menu-close-icon md-close"></i>
+                            <span class="logo-text">My Resume</span> <i class="menu-close-icon md-close"></i>
                             <hr class="hr-set-two" />
                             <ul>
                                 <li>
