--- a/coverletter.html
+++ b/coverletter.html
@@ -158,11 +158,11 @@
         </div>
     </section>
     <!-- End cover letter -->
-    <!-- Start goto top -->
+    <!-- Start goto top
     <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button">
         <span class="md-keyboard-arrow-up"></span>
     </a>
-    <!-- End goto top -->
+    End goto top -->
     <!-- Jquery library-->
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
     <!-- Bootstra jquery -->
