--- a/coverletter.html
+++ b/coverletter.html
@@ -64,7 +64,7 @@
                     <div class="col-md-6">
                         <div id="side-menu" class="move-me">
                             <hr class="hr-set" />
-                            <span class="logo-text">Mine Resume</span> <i class="menu-close-icon md-close"></i>
+                            <span class="logo-text">My Resume</span> <i class="menu-close-icon md-close"></i>
                             <hr class="hr-set-two" />
                             <ul>
                                 <li>
@@ -93,7 +93,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <img src="images/profile-photo.jpg" alt="" class="img-circle img-responsive wow zoomIn animated">
+                        <img src="images/alt.jpg" alt="" class="img-circle img-responsive wow zoomIn animated">
                         <h1 class="wow slideInUp animated">
                         Jorge Antonio Diaz-Benito Soriano
                      </h1>
@@ -115,30 +115,30 @@
                         <div class="row">
                             <div class="col-md-6 col-xs-6">
                                 <h4 class="wow fadeInUp animated">
-                              <strong>To:</strong>
-                              <b>TODO RECRUITER NAME</b> <br>
-                              <b>TODO RECRUITER FORMAL ROLE</b>
+                              <strong></strong>
+                              <b></b> <br>
+                              <b></b>
                            </h4>
                             </div>
                             <div class="col-md-6 col-xs-6">
                                 <small class="pull-right wow fadeInUp animated">
-                           <span class="md-today"></span> <b>TODO COVER LETTER DATE</b>
+                           <span class="md-today"></span> <b>08.16.2015</b>
                            </small>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="wow fadeInUp animated">
-                                    Hello, my name is Jorge. I am from Spain, where I took my Bachelor’s degree focused on agile methodologies, after which I moved to Sweden looking for a more challenging environment. Here I live in Stockholm after having been for two years in Gothenburg taking an MSc in Software Engineering.
+                                    Hello, my name is Jorge. I am from Spain, where I took my Bachelor’s degree focused in agile methodologies, after which I moved to Sweden looking for a more challenging environment. Here I live in Stockholm after having been for two years in Gothenburg taking an MSc in Software Engineering.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    In technical terms, I am deeply specialised in Java, with strong knowledge of the Android framework. Speaking of the later, I have developed three apps that can be found on Google Play (and the REST API that one of them requires), developed a guideline to implement scrolling synchronization between two RecyclerView components in Android (it can also be found in Google Play) and made important contributions, like a complex Gradle setup and WebDAV copy-pastefunctionality to a commercial one (ownCloud) with more than 100k installs.
+                                    In technical terms, I am deeply specialised in Java, with strong knowledge of the Android framework. Speaking of the later, I have developed three apps that can be found on Google Play (and the REST API that one of them requires), developed a guideline to implement scrolling synchronization between two RecyclerView components in Android (it can also be found in Google Play) and made important contributions, like a complex Gradle setup and WebDAV copy-paste functionality to a commercial one (ownCloud) with more than 100.000 installs.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    On the desktop side, I have developed two distributed suites using JS, PHP, HTML5 and Java, and some years ago I managed to break through the WhatsApp communication protocol and wrote aJava desktop client out of it.
+                                    On the desktop side, I have developed two distributed suites using JS, PHP, HTML5 and Java, and some years ago I managed to break through the WhatsApp communication protocol and wrote a Java desktop client out of it.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    As for development support tools, I have experience with both SVN and Git, Mockito and JUnit in what refers to testing, and Travis for CI. I believe this and my curiosity and fast-learning skills make me a good match for <b>TODO COMPANY NAME</b>. Hopefully you will agree! Please do not hesitate to contact me back for any questions or further talk.
+                                    As for development support tools, I have experience with both SVN and Git, and knowledge of Mockito and JUnit in what refers to testing, plus Travis for CI. I believe this and my curiosity and fast-learning skills make me a good Android engineer. Hopefully you will agree! Please do not hesitate to contact me back for any questions or further talk.
                                 </p>
                                 <h5 class="wow fadeInUp animated">
                               <strong>
@@ -158,11 +158,6 @@
         </div>
     </section>
     <!-- End cover letter -->
-    <!-- Start goto top -->
-    <a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" role="button">
-        <span class="md-keyboard-arrow-up"></span>
-    </a>
-    <!-- End goto top -->
     <!-- Jquery library-->
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
     <!-- Bootstra jquery -->
