New profile photo!

--- a/coverletter.html
+++ b/coverletter.html
@@ -93,7 +93,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <img src="images/profile-photo.jpg" alt="" class="img-circle img-responsive wow zoomIn animated">
+                        <img src="images/alt.jpg" alt="" class="img-circle img-responsive wow zoomIn animated">
                         <h1 class="wow slideInUp animated">
                         Jorge Antonio Diaz-Benito Soriano
                      </h1>
