--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                                              <span class="md-today"></span> Sep 2009-Jun 2013
                                              </small>
                                                     <p>
-                                                        Computer science and software engineering basics, followed by a stronger focus on agile methodologies and project management.
+                                                        Computer science and software engineering basics, followed by a stronger focus in agile methodologies and project management.
                                                     </p>
                                                 </li>
                                             </ul>
