--- a/coverletter.html
+++ b/coverletter.html
@@ -129,7 +129,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="wow fadeInUp animated">
-                                    Hello, my name is Jorge. I am from Spain, where I took my Bachelor’s degree focused on agile methodologies, after which I moved to Sweden looking for a more challenging environment. Here I live in Stockholm after having been for two years in Gothenburg taking an MSc in Software Engineering.
+                                    Hello, my name is Jorge. I am from Spain, where I took my Bachelor’s degree focused in agile methodologies, after which I moved to Sweden looking for a more challenging environment. Here I live in Stockholm after having been for two years in Gothenburg taking an MSc in Software Engineering.
                                 </p>
                                 <p class="wow fadeInUp animated">
                                     In technical terms, I am deeply specialised in Java, with strong knowledge of the Android framework. Speaking of the later, I have developed three apps that can be found on Google Play (and the REST API that one of them requires), developed a guideline to implement scrolling synchronization between two RecyclerView components in Android (it can also be found in Google Play) and made important contributions, like a complex Gradle setup and WebDAV copy-paste functionality to a commercial one (ownCloud) with more than 100k installs.
