--- a/coverletter.html
+++ b/coverletter.html
@@ -115,21 +115,21 @@
                         <div class="row">
                             <div class="col-md-6 col-xs-6">
                                 <h4 class="wow fadeInUp animated">
-                              <strong>To:</strong>
-                              <b>TODO RECRUITER NAME</b> <br>
-                              <b>TODO RECRUITER FORMAL ROLE</b>
+                              <strong></strong>
+                              <b></b> <br>
+                              <b></b>
                            </h4>
                             </div>
                             <div class="col-md-6 col-xs-6">
                                 <small class="pull-right wow fadeInUp animated">
-                           <span class="md-today"></span> <b>TODO COVER LETTER DATE</b>
+                           <span class="md-today"></span> <b>08.18.2015</b>
                            </small>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="wow fadeInUp animated">
-                                    Hello, my name is Jorge. I am from Spain, where I took my Bachelor’s degree focused on agile methodologies, after which I moved to Sweden looking for a more challenging environment. Here I live in Stockholm after having been for two years in Gothenburg taking an MSc in Software Engineering.
+                                    Hello, my name is Jorge. I am from Spain, where I took my Bachelor’s degree focused in agile methodologies, after which I moved to Sweden looking for a more challenging environment. Here I live in Stockholm after having been for two years in Gothenburg taking an MSc in Software Engineering.
                                 </p>
                                 <p class="wow fadeInUp animated">
                                     In technical terms, I am deeply specialised in Java, with strong knowledge of the Android framework. Speaking of the later, I have developed three apps that can be found on Google Play (and the REST API that one of them requires), developed a guideline to implement scrolling synchronization between two RecyclerView components in Android (it can also be found in Google Play) and made important contributions, like a complex Gradle setup and WebDAV copy-paste functionality to a commercial one (ownCloud) with more than 100k installs.
@@ -138,7 +138,7 @@
                                     On the desktop side, I have developed two distributed suites using JS, PHP, HTML5 and Java, and some years ago I managed to break through the WhatsApp communication protocol and wrote a Java desktop client out of it.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    As for development support tools, I have experience with both SVN and Git, Mockito and JUnit in what refers to testing, and Travis for CI. I believe this and my curiosity and fast-learning skills make me a good match for <b>TODO COMPANY NAME</b>. Hopefully you will agree! Please do not hesitate to contact me back for any questions or further talk.
+                                    As for development support tools, I have experience with both SVN and Git, Mockito and JUnit in what refers to testing, and Travis for CI. I believe this and my curiosity and fast-learning skills (needless to mention that I actually use LinkedIn a lot) make me a good match. Hopefully you will agree! Please do not hesitate to contact me back for any questions or further talk.
                                 </p>
                                 <h5 class="wow fadeInUp animated">
                               <strong>
