--- a/coverletter.html
+++ b/coverletter.html
@@ -98,7 +98,7 @@
                         Jorge Antonio Diaz-Benito Soriano
                      </h1>
                         <h4 class="wow slideInUp animated">
-                        Agile Software Engineer
+                        Agile Android Engineer
                      </h4>
                     </div>
                 </div>
@@ -115,14 +115,14 @@
                         <div class="row">
                             <div class="col-md-6 col-xs-6">
                                 <h4 class="wow fadeInUp animated">
-                              <strong>To:</strong>
-                              <b>TODO RECRUITER NAME</b> <br>
-                              <b>TODO RECRUITER FORMAL ROLE</b>
+                              <strong></strong>
+                              <b></b> <br>
+                              <b></b>
                            </h4>
                             </div>
                             <div class="col-md-6 col-xs-6">
                                 <small class="pull-right wow fadeInUp animated">
-                           <span class="md-today"></span> <b>TODO COVER LETTER DATE</b>
+                           <span class="md-today"></span> <b>08.21.2015</b>
                            </small>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                                     On the desktop side, I have developed two distributed suites using JS, PHP, HTML5 and Java, and some years ago I managed to break through the WhatsApp communication protocol and wrote a Java desktop client out of it.
                                 </p>
                                 <p class="wow fadeInUp animated">
-                                    As for development support tools, I have experience with both SVN and Git, Mockito and JUnit in what refers to testing, and Travis for CI. I believe this and my curiosity and fast-learning skills make me a good match for <b>TODO COMPANY NAME</b>. Hopefully you will agree! Please do not hesitate to contact me back for any questions or further talk.
+                                    As for development support tools, I have experience with both SVN and Git, Mockito and JUnit in what refers to testing, and Travis for CI. I believe this and my curiosity and fast-learning skills make my profile interesting. Hopefully you will agree! Please do not hesitate to contact me back for any questions or further talk but please, <u>if I am going to get a phone call, let us arrange it through e-mail first</u>, thanks.
                                 </p>
                                 <h5 class="wow fadeInUp animated">
                               <strong>
