Fixes an issue with the header

--- a/index.html
+++ b/index.html
@@ -60,30 +60,9 @@
                             <a href="#" class="">
                                 <i class="md-home menu-open-icon wow bounceIn animated" data-wow-delay="1s" data-wow-duration="1s"></i>
                             </a>
-                            <span class="page-title wow fadeIn animated">
-                           Jorge
-                           </span>
+                            <span class="page-title wow fadeIn animated" />
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div id="side-menu" class="move-me">
-                            <hr class="hr-set" />
-                            <span class="logo-text">Mine Resume</span> <i class="menu-close-icon md-close"></i>
-                            <hr class="hr-set-two" />
-                            <ul>
-                                <li>
-                                    <a href="index.html" class="active"> <i class="md-home"></i>Home</a>
-                                </li>
-                                <li>
-                                    <a href="portfolio.html"> <i class="md-palette"></i>Portfolio</a>
-                                </li>
-                                <li>
-                                    <a href="coverletter.html"> <i class="md-insert-drive-file"></i>Coverletter</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
@@ -123,7 +102,7 @@
                         <p>
                             I am from Spain, but currently live and work in Sweden, where I moved looking for a more challenging environment. On the technical side, I am most comfortable with Java and the Android framework.
                             <br>
-                            <br> As a person, I am very active and curious. In my free time I like to do sports or go out with my friends, although from time to time I may stay at home learning something on my own.
+                            <br> As a person, I am very active and curious. In my free time I like to do sports or go out with my friends, although occasionally I may stay home learning something on my own.
                         </p>
                         <a href="https://github.com/Stoyicker" target="_blank">
                         Check out my GitHub profile
